<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:background="@drawable/test_bank"

    tools:context="therisingthumbs.banking.LogIn$PlaceholderFragment">

    <TextView
        android:text="@string/welcome_back"
        android:textSize="25dp"
        android:textColor="#0f0f0f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"

            android:id="@+id/email"
            android:hint="@string/email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/pass"
            android:hint="@string/pass"/>

        <Button
            android:layout_width="match_parent"
            android:background="@drawable/button_style"
            android:layout_height="wrap_content"
            android:id="@+id/log_in_button"
            android:text="@string/log_in"
            android:onClick="LogInAttempt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/errMsg"
            android:padding="5dp"
            android:textColor="#ff0000"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</RelativeLayout>